--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: FrHorschig/kant-search-api
-          path: kant-search-api
+          token: ${{ secrets.API_REPO_TOKEN }}
       - name: generate OpenAPI models
         run: docker run --rm \
           -v "${PWD}:/local" \
