--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -16,9 +16,7 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      API_REPO_TOKEN: ${{ secrets.API_REPO_TOKEN }}
-
+    environment: General
     steps:
       - uses: actions/checkout@v4
 
@@ -26,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: FrHorschig/kant-search-api
-          token: ${{ env.API_REPO_TOKEN }}
+          token: ${{ secrets.API_REPO_TOKEN }}
       - name: generate OpenAPI models
         run: docker run --rm \
           -v "${PWD}:/local" \
