--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -30,6 +30,7 @@ jobs:
             -i kant-search-api/src/openapi/openapi.yaml \
             -o src/kant-search-api-generated \
             -g go-echo-server
+          ls /local
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -41,6 +42,10 @@ jobs:
       - name: Build
         working-directory: src
         run: go build -v ./...
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
       - name: Test
         working-directory: src
         run: go test ./... -tags=integration,unit
