--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -33,14 +33,14 @@ jobs:
             -o src/kant-search-api-generated \
             -g go-echo-server
 
-      - name: Set up Go
+      - name: set up Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
-      - name: Install dependencies
+      - name: install dependencies
         working-directory: src
         run: go get .
-      - name: Build
+      - name: build
         working-directory: src
         run: go build -v ./...
 
@@ -48,6 +48,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Test
+      - name: test
         working-directory: src
         run: go test ./... -tags=integration,unit
