--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -46,6 +46,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: debug
+        run: |
+          ls -la
       - name: test
         working-directory: src
         run: go test ./... -tags=integration,unit
