--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
     environment: General
     steps:
@@ -41,14 +41,6 @@ jobs:
       - name: build
         working-directory: src
         run: go build -v ./...
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: debug
-        run: |
-          ls -la
       - name: test
         working-directory: src
         run: go test ./... -tags=integration,unit
