--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,9 @@ jobs:
           go-version: "1.20"
       - name: install dependencies
         working-directory: src
-        run: go get .
+        run: |
+          go get .
+          go install github.com/golang/mock/mockgen@v1.6.0
       - name: build
         working-directory: src
         run: go build -v ./...
