--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,18 @@ jobs:
     environment: General
     steps:
       - uses: actions/checkout@v4
+      - name: set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
+      - name: install dependencies
+        working-directory: src
+        run: |
+          go get .
+          go install github.com/golang/mock/mockgen@v1.6.0
+      - name: generate
+        working-directory: src
+        run: go generate ./...
 
       - name: checkout OpenAPI spec
         uses: actions/checkout@v4
@@ -31,21 +43,20 @@ jobs:
             -o /local/src/kant-search-api-generated \
             -g go-echo-server
 
-      - name: set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-      - name: install dependencies
-        working-directory: src
+      - name: set up python venv
         run: |
-          go get .
-          go install github.com/golang/mock/mockgen@v1.6.0
+          cd src_py
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install -U pip setuptools wheel
+          pip install -U spacy
+          python -m spacy download de_core_news_sm
+          deactivate
+          cd ../..
+
       - name: build
         working-directory: src
         run: go build -v ./...
-      - name: generate
-        working-directory: src
-        run: go generate ./...
       - name: test
         working-directory: src
         run: go test -tags=integration,unit ./...
