--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,4 +58,6 @@ jobs:
         run: go generate ./...
       - name: test
         working-directory: src
-        run: go test -tags=integration,unit ./...
+        run: |
+          docker logout
+          go test -tags=integration,unit ./...
