--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,8 @@ jobs:
       OWNER: ${{ github.repository_owner }}
     steps:
       - uses: actions/checkout@v4
+      - name: make owner lowercase
+        run: echo "${{ env.OWNER }}" | awk '{print tolower($0)}' >> $GITHUB_ENV
       - name: login to ghcr
         uses: docker/login-action@v3
         with:
@@ -19,8 +21,7 @@ jobs:
           password: ${{ secrets.DB_IMAGE_PAT}}
       - name: pull database image
         run: |
-          owner_lower=$(echo "${{ env.OWNER }}" | tr '[:upper:]' '[:lower:]')
-          docker pull ghcr.io/"$owner_lower"/kant-search-db:latest
+          docker pull ghcr.io/${{ env.OWNER }}/kant-search-db:latest
       - name: set up python venv
         run: |
           cd src_py
