--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,9 +10,11 @@ jobs:
     env:
       OWNER: ${{ github.repository_owner }}
     steps:
-      - uses: actions/checkout@v4
+      - name: checkout
+        uses: actions/checkout@v4
       - name: make owner lowercase
-        run: echo "${{ env.OWNER }}" | awk '{print tolower($0)}' >> $GITHUB_ENV
+        run: |
+          echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
       - name: login to ghcr
         uses: docker/login-action@v3
         with:
