fix: remove docker logout command

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,6 +58,4 @@ jobs:
 
       - name: test
         working-directory: src
-        run: |
-          docker logout
-          go test -tags=integration,unit ./...
+        run: go test -tags=integration,unit ./...
