fix: use tag 'latest' for database container

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,4 +58,4 @@ jobs:
 
       - name: test
         working-directory: src
-        run: go test -tags=integration,unit ./...
+        run: go test ./... -tags=integration,unit
