--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,7 +6,8 @@ on:
       - "*"
 
 jobs:
-  publish:
+  publish-docker:
+    name: Publish docker image
     runs-on: ubuntu-latest
     env:
       OWNER: ${{ github.repository_owner }}
@@ -19,7 +20,10 @@ jobs:
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | sed 's/^v//')" >> $GITHUB_ENV
       - name: build Docker image
-        run: make
+        run: |
+          docker build \
+            -f ./deployment/Dockerfile \
+            -t ghcr.io/frhorschig/kant-search-backend:latest \
 
       - name: login to ghcr
         uses: docker/login-action@v3
