--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -4,14 +4,21 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - "**"
 
 jobs:
   create-tag:
     name: Create new tag
     runs-on: ubuntu-latest
     steps:
+      - name: Abort tag creation if push was forced
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               "https://api.github.com/repos/${{ github.repository }}/events" > events.json
+          if jq '.[0].payload.force' events.json; then
+            echo "Force push detected, stopping workflow."
+            exit 78 # Using 78 to neutralize workflow without failing
+          fi
+
       - name: GitHub Tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
