--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,13 +2,27 @@ name: Publish
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
 
 jobs:
+  create-tag:
+    name: Create new tag
+    if: ${{ !github.event.forced }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: GitHub Tag
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: adjust env variables
+        run: |
+          echo "VERSION=${{ steps.tag_version.outputs.new_tag }}" >> $GITHUB_ENV
+
   publish-docker:
     name: Publish docker image
     runs-on: ubuntu-latest
+    needs: create-tag
     env:
       OWNER: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
@@ -18,7 +32,6 @@ jobs:
       - name: adjust env variables
         run: |
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
-          echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | sed 's/^v//')" >> $GITHUB_ENV
       - name: build Docker image
         run: |
           docker build \
@@ -44,6 +57,7 @@ jobs:
   publish-binary:
     name: Publish Go binary
     runs-on: ubuntu-latest
+    needs: create-tag
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
