--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,15 +1,9 @@
-FROM golang:1.20 AS builder
+FROM golang:1.21 AS builder
 WORKDIR /app
-COPY src/ .
-ENV CGO_ENABLED=0
-RUN go build -o main .
-
-FROM alpine:latest
-WORKDIR /app
+COPY src/kant-search-backend ./kant-search-backend
 RUN mkdir ssl
 COPY ./ssl/cert.pem ssl/
 COPY ./ssl/key.pem ssl/
-COPY --from=builder /app/main .
 
 ENV ALLOW_ORIGINS=https://localhost:4200
-CMD ["./main"]
+CMD ["./kant-search-backend"]
