--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,10 +19,38 @@ jobs:
         run: |
           echo "VERSION=${{ steps.tag_version.outputs.new_tag }}" >> $GITHUB_ENV
 
+  build:
+    name: Publish Go binary
+    runs-on: ubuntu-latest
+    needs: create-tag
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.21"
+      - name: Get Go dependencies
+        working-directory: src
+        env:
+          GOPRIVATE: "github.com/frhorschig/kant-search-api"
+        run: |
+          git config --global url."https://${{ secrets.API_TAGS_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          go clean -modcache
+          go mod tidy
+      - name: Build application
+        working-directory: src
+        run: go build ./...
+      - name: Upload binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: kant-search-backend
+          path: src/kant-search-backend
+
   publish-docker:
     name: Publish docker image
     runs-on: ubuntu-latest
-    needs: create-tag
+    needs: build
     env:
       OWNER: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
@@ -33,6 +61,8 @@ jobs:
         run: |
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
       - name: Build Docker image
+        env:
+          GOPRIVATE: "github.com/frhorschig/kant-search-api"
         run: |
           docker build \
             -f ./deployment/Dockerfile \
@@ -57,19 +87,8 @@ jobs:
   publish-binary:
     name: Publish Go binary
     runs-on: ubuntu-latest
-    needs: create-tag
+    needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.21"
-      - name: Build application
-        working-directory: src/
-        run: |
-          go build .
-
       - name: Create release
         uses: softprops/action-gh-release@v2.0.4
         with:
