--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Build application
         working-directory: src
         run: go build ./...
-      - name: Upload binary
+      - name: Upload the build artifact
         uses: actions/upload-artifact@v4
         with:
           name: kant-search-backend
@@ -60,15 +60,17 @@ jobs:
       - name: Adjust env variables
         run: |
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
+      - name: Download the build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: kant-search-backend
+          path: src
       - name: Build Docker image
-        env:
-          GOPRIVATE: "github.com/frhorschig/kant-search-api"
         run: |
           docker build \
             -f ./deployment/Dockerfile \
             -t ghcr.io/frhorschig/kant-search-backend:latest \
             .
-
       - name: Login to ghcr
         uses: docker/login-action@v3
         with:
@@ -89,6 +91,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download the build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: kant-search-backend
       - name: Create release
         uses: softprops/action-gh-release@v2.0.4
         with:
