--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,12 +15,12 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: adjust env variables
+      - name: Write version to env variable
         run: |
           echo "VERSION=${{ steps.tag_version.outputs.new_tag }}" >> $GITHUB_ENV
 
   build:
-    name: Publish Go binary
+    name: Build Go binary
     runs-on: ubuntu-latest
     needs: create-tag
     steps:
@@ -30,7 +30,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.21"
-      - name: Get Go dependencies
+      - name: install mockgen
+        run: go install github.com/golang/mock/mockgen@v1.6.0
+      - name: generate
+        working-directory: src
+        run: go generate ./...
+      - name: Get private Go dependency
         working-directory: src
         env:
           GOPRIVATE: "github.com/frhorschig/kant-search-api"
