--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -53,7 +53,7 @@ jobs:
           path: src/kant-search-backend
 
   publish-docker:
-    name: Publish docker image
+    name: Publish Docker image
     runs-on: ubuntu-latest
     needs: build
     env:
