--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,21 +11,21 @@ jobs:
       OWNER: ${{ github.repository_owner }}
       DB_IMG: ghcr.io/frhorschig/kant-search-database:latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
-      - name: make owner lowercase
+      - name: Make owner lowercase
         run: |
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
-      - name: login to ghcr
+      - name: Login to ghcr
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ env.OWNER }}
           password: ${{ secrets.DB_IMAGE_PAT}}
-      - name: pull database image
+      - name: Pull database image
         run: |
           docker pull ${{ env.DB_IMG }}
-      - name: set up python venv
+      - name: Set up python venv
         run: |
           cd src_py
           python -m venv .venv
@@ -36,16 +36,16 @@ jobs:
           deactivate
           cd ../..
 
-      - name: set up Go
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.21"
-      - name: install mockgen
+      - name: Install mockgen
         run: go install github.com/golang/mock/mockgen@v1.6.0
-      - name: generate
+      - name: Generate
         working-directory: src
         run: go generate ./...
-      - name: get Go dependencies
+      - name: Get Go dependencies
         working-directory: src
         env:
           GOPRIVATE: "github.com/frhorschig/kant-search-api"
@@ -53,10 +53,10 @@ jobs:
           git config --global url."https://${{ secrets.API_TAGS_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
           go clean -modcache
           go mod tidy
-      - name: build
+      - name: Build
         working-directory: src
         run: go build ./...
 
-      - name: test
+      - name: Test
         working-directory: src
         run: go test ./... -tags=integration,unit
