--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -45,7 +45,7 @@ jobs:
           go mod tidy
       - name: Build application
         working-directory: src
-        run: go build ./...
+        run: go build
       - name: Upload the build artifact
         uses: actions/upload-artifact@v4
         with:
