--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ !github.event.forced }}
     runs-on: ubuntu-latest
     steps:
-      - name: GitHub Tag
+      - name: Create tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
