--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   create-tag:
-    name: Create new tag
+    name: create new tag
     if: ${{ !github.event.forced }}
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +20,7 @@ jobs:
           echo "VERSION=${{ steps.tag_version.outputs.new_tag }}" >> $GITHUB_ENV
 
   build:
-    name: Build Go binary
+    name: build Go binary
     runs-on: ubuntu-latest
     needs: create-tag
     steps:
@@ -53,7 +53,7 @@ jobs:
           path: src/kant-search-backend
 
   publish-docker:
-    name: Publish Docker image
+    name: publish Docker image
     runs-on: ubuntu-latest
     needs: build
     env:
@@ -92,7 +92,7 @@ jobs:
           docker push $img:latest
 
   publish-binary:
-    name: Publish Go binary
+    name: publish Go binary
     runs-on: ubuntu-latest
     needs: build
     steps:
