chore: add version number to release step input

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -104,5 +104,6 @@ jobs:
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
+          tag_name: ${{ env.VERSION }}
           files: kant-search-backend
           github_token: ${{ secrets.GITHUB_TOKEN }}
