--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,26 +8,19 @@ on:
 jobs:
   create-tag:
     name: create new tag
-    if: ${{ !github.event.forced }}
     runs-on: ubuntu-latest
+    if: ${{ !github.event.forced }}
     steps:
       - name: create tag
         id: create_tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: write version to env variable
-        run: |
-          echo "VERSION=${{ steps.create_tag.outputs.new_tag }}" >> $GITHUB_ENV
-      - name: debug
-        run: echo "${{ env.VERSION }}"
-      - name: debug2
-        run: echo "${{ steps.create_tag.outputs.new_tag }}"
 
   build:
     name: build Go binary
     runs-on: ubuntu-latest
-    needs: create-tag
+    if: ${{ !github.event.forced }}
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -60,7 +53,7 @@ jobs:
   publish-docker:
     name: publish Docker image
     runs-on: ubuntu-latest
-    needs: build
+    needs: [create-tag, build]
     env:
       OWNER: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
@@ -81,10 +74,6 @@ jobs:
             -f ./deployment/Dockerfile \
             -t ghcr.io/frhorschig/kant-search-backend:latest \
             .
-      - name: debug
-        run: echo "${{ env.VERSION }}"
-      - name: debug2
-        run: echo "${{ steps.create_tag.outputs.new_tag }}"
       - name: login to ghcr
         uses: docker/login-action@v3
         with:
@@ -94,7 +83,7 @@ jobs:
       - name: publish docker image
         run: |
           img=ghcr.io/${{ env.OWNER }}/${{ env.REPO_NAME }}
-          version=${{ env.VERSION }}
+          version=${{ needs.create_tag.outputs.new_tag }}
           docker tag  $img $img:$version
           docker tag  $img $img:latest
           docker push $img:$version
@@ -103,19 +92,15 @@ jobs:
   publish-binary:
     name: publish Go binary
     runs-on: ubuntu-latest
-    needs: build
+    needs: [create-tag, build]
     steps:
       - name: download the build artifact
         uses: actions/download-artifact@v4
         with:
           name: kant-search-backend
-      - name: debug
-        run: echo "${{ env.VERSION }}"
-      - name: debug2
-        run: echo "${{ steps.create_tag.outputs.new_tag }}"
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
-          tag_name: ${{ env.VERSION }}
+          tag_name: ${{ needs.create_tag.outputs.new_tag }}
           files: kant-search-backend
           token: ${{ secrets.GITHUB_TOKEN }}
