--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+    outputs:
+      new_tag: ${{ steps.create_tag.outputs.new_tag }}
 
   build:
     name: build Go binary
