chore: add publish workflow
* chore: add publish workflow

* fix: allow tags of the form vX.Y.Z

* chore: add workflow to create new tag on merge

* chore: fix docker build step

* chore: add job to create new release

* chore: remove unused variables

* chore: fix and improve tag workflow

* chore: simplify force-push detection

* chore: fix docker command

* chore: use annotated tag

* chore: merge tag and publish workflows

* chore: adjust Go build command

* chore: remove build process from Dockerfile

* chore: extract build job

* chore: simplify copying

* chore: use artifact upload/download

* chore: fix Go dependencies

* chore: adjust name capitalization

* chore: fix build command

* chore: improve step name

* chore: revert back to lowercase names

* chore: clean up names

* chore: add missing id

* chore: add version number to release step input

* chore: fix token input

* chore: add debug statements

* chore: fix cross-job variable access

* chore: add missing outputs fields

* chore: remove name in test workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
           cd ../..
 
       - name: set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: "1.21"
       - name: install mockgen
@@ -55,7 +55,7 @@ jobs:
           go mod tidy
       - name: build
         working-directory: src
-        run: go build -v ./...
+        run: go build ./...
 
       - name: test
         working-directory: src
