build: adjust Dockerfile

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,9 +1,15 @@
-FROM golang:1.21 AS builder
+FROM golang:1.22
 WORKDIR /app
 COPY src/kant-search-backend .
+
 RUN mkdir ssl
 COPY ./ssl/cert.pem ssl/
 COPY ./ssl/key.pem ssl/
 
-ENV ALLOW_ORIGINS=https://localhost:4200
+RUN apt-get update && apt-get install -y python3 python3-pip
+RUN pip3 install spacy
+COPY src_py/split_into_sentences.py .
+ENV KSGO_PYTHON_BIN_PATH="python3"
+ENV KSGO_PYTHON_SCRIPT_PATH="split_into_sentences.py"
+
 CMD ["./kant-search-backend"]
