refactor: rename python script

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -106,5 +106,5 @@ jobs:
           tag_name: ${{ needs.create-tag.outputs.new_tag }}
           files: |
             kant-search-backend
-            src_py/split_into_sentences.py
+            src_py/split_text.py
           token: ${{ secrets.GITHUB_TOKEN }}
