--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -2,10 +2,18 @@ FROM golang:1.22
 WORKDIR /app
 COPY src/kant-search-backend .
 
-RUN apt-get update && apt-get install -y python3 python3-pip
-RUN pip3 install spacy
+RUN apt-get update
+RUN apt-get install -y python3 python3-venv
+
+RUN python3 -m venv .venv
+RUN . .venv/bin/activate
+RUN pip3 install -U pip setuptools wheel
+RUN pip3 install -U spacy
+RUN python -m spacy download en_core_web_sm
+RUN deactivate
+
 COPY src_py/split_text.py .
-ENV KSGO_PYTHON_BIN_PATH="python3"
+ENV KSGO_PYTHON_BIN_PATH=".venv/bin/python3"
 ENV KSGO_PYTHON_SCRIPT_PATH="split_text.py"
 
 CMD ["./kant-search-backend"]
