build: fix python publishing
* build: adjust python env variables

* build: adjust Dockerfile

* build: add python script to release files

* refactor: rename python script

* refactor: rename environment variable

* fix: fix error logging

* build: rm ssl file copying from Dockerfile

* build: fix spacy installation in Dockerfile

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,9 +1,17 @@
-FROM golang:1.21 AS builder
+FROM golang:1.22
 WORKDIR /app
 COPY src/kant-search-backend .
-RUN mkdir ssl
-COPY ./ssl/cert.pem ssl/
-COPY ./ssl/key.pem ssl/
 
-ENV ALLOW_ORIGINS=https://localhost:4200
+RUN apt-get update
+RUN apt-get install -y python3 python3-venv
+
+RUN python3 -m venv .venv
+RUN . .venv/bin/activate \
+  pip install -U setuptools wheel spacy \
+  python -m spacy download en_core_web_sm
+
+COPY src_py/split_text.py .
+ENV KSGO_PYTHON_BIN_PATH=".venv/bin/python3"
+ENV KSGO_PYTHON_SCRIPT_PATH="split_text.py"
+
 CMD ["./kant-search-backend"]
