chore: update sonar config

--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=kant-search-backend
+sonar.language=go
 sonar.sourceEncoding=UTF-8
+
 sonar.sources=.
 sonar.exclusions=kant-search-api-generated/**,**/mocks/**
 
