--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,27 +2,13 @@ name: Publish
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 
 jobs:
-  create-tag:
-    name: create new tag
-    runs-on: ubuntu-latest
-    if: ${{ !github.event.forced }}
-    steps:
-      - name: create tag
-        id: create_tag
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-    outputs:
-      new_tag: ${{ steps.create_tag.outputs.new_tag }}
-
   build:
     name: build Go binary
     runs-on: ubuntu-latest
-    if: ${{ !github.event.forced }}
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -55,7 +41,7 @@ jobs:
   publish-docker:
     name: publish Docker image
     runs-on: ubuntu-latest
-    needs: [create-tag, build]
+    needs: build
     env:
       OWNER: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
@@ -85,7 +71,7 @@ jobs:
       - name: publish docker image
         run: |
           img=ghcr.io/${{ env.OWNER }}/${{ env.REPO_NAME }}
-          version=${{ needs.create-tag.outputs.new_tag }}
+          version=${{ github.ref_name }}
           docker tag  $img $img:$version
           docker tag  $img $img:latest
           docker push $img:$version
@@ -94,7 +80,7 @@ jobs:
   publish-binary:
     name: publish Go binary
     runs-on: ubuntu-latest
-    needs: [create-tag, build]
+    needs: build
     steps:
       - name: download the build artifact
         uses: actions/download-artifact@v4
@@ -103,7 +89,7 @@ jobs:
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
-          tag_name: ${{ needs.create-tag.outputs.new_tag }}
+          tag_name: ${{ github.ref_name }}
           files: |
             kant-search-backend
             src_py/split_text.py
