--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -82,6 +82,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: checkout code
+        uses: actions/checkout@v4
       - name: download the build artifact
         uses: actions/download-artifact@v4
         with:
