build: add script to set env vars to release

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -95,4 +95,5 @@ jobs:
           files: |
             kant-search-backend
             src_py/split_text.py
+            deployment/env.sh
           token: ${{ secrets.GITHUB_TOKEN }}
