--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
+          go-version: "1.24"
       - name: Install mockgen
         run: go install github.com/golang/mock/mockgen@v1.6.0
       - name: Generate
@@ -94,6 +94,6 @@ jobs:
           tag_name: ${{ github.ref_name }}
           files: |
             kant-search-backend
-            src_py/split_text.py
+            config/volume-metadata.json
             deployment/env.sh
           token: ${{ secrets.GITHUB_TOKEN }}
