update github actions workflows

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,12 +21,9 @@ jobs:
       - name: Generate
         working-directory: src
         run: go generate ./...
-      - name: get private Go dependency
+      - name: get Go dependencies
         working-directory: src
-        env:
-          GOPRIVATE: "github.com/frhorschig/kant-search-api"
         run: |
-          git config --global url."https://${{ secrets.API_TAGS_PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
           go clean -modcache
           go mod tidy
       - name: build application
