--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -74,23 +74,17 @@ jobs:
           docker push $img:$version
           docker push $img:latest
 
-  publish-binary:
-    name: publish Go binary
+  publish-config:
+    name: publish the configuration files
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: checkout code
         uses: actions/checkout@v4
-      - name: download the build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: kant-search-backend
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
           tag_name: ${{ github.ref_name }}
           files: |
-            kant-search-backend
             config/volume-metadata.json
-            deployment/env.sh
           token: ${{ secrets.GITHUB_TOKEN }}
