--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.24
 WORKDIR /app
 COPY src/kant-search-backend .
+RUN chmod +x kant-search-backend
 
 EXPOSE 3000
 CMD ["./kant-search-backend"]
